# analytical-agent

./: .claude-ignore  .env.example  .gitignore  .impeccable.md  .mcp.json  CLAUDE.md  Makefile  README.md  findings.md  gap_analysis.md  knowledge_architecture_implementation_plan.md  knowledge_architecture_review.md  progress.md  task_plan.md
backend/: pyproject.toml
backend/app/: config.py  main.py  metrics.py
backend/app/api/: chat_api.py  config_api.py  conversations_api.py  datasets_api.py  files_api.py  health.py  mcp_sampling_api.py  models_api.py  prompts_api.py  sb_api.py  sb_gardener.py  sb_pipeline.py  scheduler_api.py  session_search_api.py  settings_api.py  skills_api.py  skills_telemetry_api.py  slash_api.py  sop_api.py  trace_api.py  uploads_api.py  wiki_api.py
backend/app/api/tests/: test_mcp_sampling.py  test_sb_api.py  test_skills_telemetry_api.py
backend/app/artifacts/: __init__.py  distill.py  events.py  store.py
backend/app/context/: manager.py
backend/app/core/: home.py
backend/app/core/tests/: test_home.py
backend/app/data/: db_init.py
backend/app/evals/: analyzer.py  judge.py  runner.py  types.py
backend/app/harness/: a2a.py  config.py  dispatcher.py  fs_tools.py  injection_guard.py  injector.py  loop.py  router.py  sandbox.py  sandbox_bootstrap.py  semantic_compactor.py  skill_tools.py  stream_events.py  todo_store.py  toolsets.py  turn_state.py  wiring.py  wrap_up.py
backend/app/harness/clients/: base.py  mlx_client.py  ollama_client.py  openrouter_client.py
backend/app/harness/guardrails/: pre_tool.py  tiers.py
backend/app/harness/research/: jobs.py  router.py  synthesis.py  types.py
backend/app/harness/tests/: test_composition_tools.py  test_config.py  test_injection_guard.py  test_injector.py  test_inline_table_injection.py  test_loop.py  test_loop_semantic_compaction.py  test_parallel_tools.py  test_report_tool.py  test_sandbox.py  test_sandbox_bootstrap.py  test_semantic_compactor.py  test_skill_tools.py  test_toolsets.py  test_turn_state_sampling.py  test_wrap_up.py
backend/app/hooks/: sb_digest_hook.py
backend/app/integrity/: __init__.py  __main__.py  config.py  drift_scan.py  engine.py  issue.py  protocol.py  schema.py
backend/app/integrity/plugins/: __init__.py
backend/app/integrity/tests/: test_main_config_registry.py
backend/app/scheduler/: engine.py  jobs.py  runner.py
backend/app/scheduler/tests/: test_engine.py  test_jobs.py
backend/app/skills/: base.py  manifest.py  registry.py
backend/app/skills/altair_charts/: skill.yaml
backend/app/skills/analysis_plan/: SKILL.md  skill.yaml
backend/app/skills/charting/: SKILL.md
backend/app/skills/correlation/: SKILL.md  bootstrap.py  correlate.py  method.py  skill.yaml
backend/app/sop/: log.py  runner.py
backend/app/storage/: json_store.py  session_db.py
backend/app/telemetry/: __init__.py  sidecar.py  skills_log.py
backend/app/tools/: sb_digest_tools.py  sb_pipeline_state.py  sb_tools.py
backend/app/trace/: assembler.py  bus.py  judge_replay.py  publishers.py  recorder.py  retention.py  store.py
backend/app/wiki/: engine.py  lint.py
backend/config/: branding.yaml  toolsets.yaml
backend/config/themes/: altair_theme.py  table_css.py
backend/scripts/: batch_runner.py  preload_mlx_models.py  run_eval.py  seed_eval_data.py
backend/scripts/tests/: test_batch_runner.py
backend/tests/: test_config_branding.py
backend/tests/api/: test_chat_mlx_factory.py  test_conversations_api.py  test_models_api.py  test_prompt_digest_injection.py  test_sb_gardener.py  test_sb_pipeline.py  test_sb_tools_registered.py  test_settings_api.py  test_slash_api.py  test_uploads_api.py
backend/tests/evals/: conftest.py  real_agent.py  test_level1.py  test_level2.py  test_level3.py  test_level4.py  test_level5.py
backend/tests/integration/: test_data_pipeline.py
backend/tests/integrity/: test_drift_scan.py  test_engine.py  test_engine_pipeline.py  test_health_static_mount.py  test_issue.py  test_main_cli.py  test_schema.py
backend/tests/settings/: test_claude_settings.py
backend/tests/sop/: test_log.py  test_runner.py  test_sop_api.py
backend/tests/tools/: test_sb_pipeline_state.py  test_sb_tools.py  test_sb_tools_research.py
backend/tests/trace/: test_assembler.py  test_bus.py  test_gan_corpus_cli.py  test_judge_replay.py  test_publishers.py  test_recorder_db.py  test_retention.py  test_store.py  test_trace_api.py
backend/tests/unit/: test_a2a.py  test_altair_theme.py  test_artifact_store.py  test_chat_api_wiring.py  test_config.py  test_context_manager.py  test_eval_grading.py  test_eval_judge.py  test_eval_rubric.py  test_eval_runner.py  test_eval_types.py  test_fs_tools.py  test_hooks.py  test_injector_budget.py  test_plan_mode.py  test_sandbox_bootstrap.py  test_seed_eval.py  test_skill_base.py  test_skill_registry_frontmatter.py  test_table_css.py  test_theme_tokens.py
components/second-brain/: .gitignore  AGENTS.md  README.md  pyproject.toml
components/second-brain/docs/: architecture.md  automation.md  data-model.md  evals.md  integration.md  obsidian-visualization.md  operations.md  status.md
components/second-brain/tests/: conftest.py  test_analytics_builder.py  test_chunker.py  test_cli.py  test_cli_automation.py  test_cli_extract.py  test_cli_init.py  test_cli_lint.py  test_cli_quality.py  test_cli_retrieval.py  test_config.py  test_config_analytics.py  test_duckdb_store.py  test_e2e_extract_search.py  test_e2e_ingest.py  test_embed_claude.py  test_embed_local.py  test_eval_corpus.py  test_eval_digest_suite.py  test_eval_graph.py  test_eval_ingest.py  test_eval_retrieval.py  test_eval_retrieval_modes.py  test_eval_runner.py  test_extract_claims.py  test_extract_client.py  test_extract_schema.py  test_extract_worker.py  test_extract_writer.py  test_frontmatter.py  test_fts_store.py  test_graph_extension.py  test_graph_property_graph.py  test_habits_learning.py  test_habits_retrieval_mode.py  test_hybrid_retriever.py  test_inbox_runner.py  test_ingest_base.py  test_ingest_docx.py  test_ingest_epub.py  (+36 more)
(+765 files in other folders)
