[project]
name = "analytical-agent"
version = "0.1.0"
description = "Full-stack analytical platform for MLE, data scientists, and quants"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "duckdb>=1.2.0",
    "polars>=1.20.0",
    "pandas>=2.2.0",
    "altair>=5.5",
    "httpx>=0.28.0",
    "pyyaml>=6.0",
    "faker>=33.0.0",
    "scipy>=1.14.0",
    "statsmodels>=0.14.0",
    "numpy>=1.26.0",
    "ruptures>=1.1.9",
    "anthropic>=0.40.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.0",
    "weasyprint>=62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "app/skills"]
asyncio_mode = "auto"
pythonpath = [".", ".."]
addopts = "--import-mode=importlib"
markers = [
    "slow: marks tests as slow (multi-turn LLM evals — deselect with -m 'not slow')",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.25.0",
    "types-pyyaml>=6.0.12.20260408",
]
